--- a/style.css
+++ b/style.css
@@ -66,6 +66,249 @@ navbar li a:active{
     left: 20px;
 }
 
+
+.login-button{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #fff;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+}
+.login-button:hover{
+    background-color: #fff;
+    color: hotpink;
+}
+
+
+.extra{
+    height: 600px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+}
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+   /* margin-top: 400px;
+    margin-left: 350px;*/
+    background: transparent; 
+    border: 2px solid rgba(202, 163, 228, 0.5); 
+    border-radius: 20px; 
+    backdrop-filter: blur (20px); 
+    box-shadow: 00 30px rgba(0, 0, 0, .5); justify-content: center; align-items: center;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0);
+    transition:transform .5s ease, height .2s ease;
+
+}
+
+.wrapper.active-popup{
+    transform: scale(1) ;
+}
+
+.wrapper.active{
+    height: 520px;
+}
+
+
+
+
+
+.wrapper .form-box {
+    
+    width: 100%; 
+    padding: 40px;
+}
+
+.wrapper .form-box.login{
+   /* display: none;*/
+   transition: transform .18s ease;
+   transform: translateX(0);
+ 
+}
+
+
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(-400px);
+}
+
+
+.wrapper .form-box.register{
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+
+.wrapper.active .form-box.register{
+    transition: transform .18s ease;
+    transform: translateX(0);
+  
+    }
+
+.wrapper .icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: darkgreen;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+    .form-box h2{
+        font-size: 2em;
+        color: black;
+        text-align: center;
+    }
+
+    .input-box{
+        position: relative;
+        width: 100%;
+        height: 50px;
+        border-bottom: 2px solid darkgreen;
+        margin: 30px 0px;
+    }
+
+
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: darkorchid;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+
+.input-box input:focus~label,
+.input-box input:focus~label{
+    top:-5px;
+} 
+
+
+
+
+
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: lightblue;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+
+.input-box .icon{
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: darkorange;
+    line-height: 57px; 
+}
+
+.remember-forget{
+    font-size: .9em;
+    color: darkorchid;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.remember-forget label input{
+    accent-color: browm;
+    margin-right: 3px;
+
+}
+
+.remember-forget a{
+    color: brown;
+    text-decoration: none;
+}
+
+.remember-forget a:hover{
+    text-decoration: underline;
+}
+
+.btn{
+    width: 100%;
+    height: 45px;
+    background: darkslategray;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
+
+.login-register{
+    font-size: .9em;
+    color: darkblue;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px ;
+}
+
+
+.login-register p a{
+    color: blueviolet;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover{
+    text-decoration: underline ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #hero{
     background-image: url("https://cdn-blog.novoresume.com/articles/creative-resume-templates/bg.png");
     height: 90vh;
@@ -77,9 +320,11 @@ navbar li a:active{
     flex-direction: column;
      align-items:flex-start;
      justify-content: center;
+     
+     
 }
 
-#hero button{
+.explore-button{
     background-image: url("");
     background-color: lightgreen;
     color: white;
