--- a/style.css
+++ b/style.css
@@ -897,7 +897,6 @@ footer .copyright{
     margin: 10px;
 }
 
-
 .delete-section{
     
     margin: 20px;
@@ -909,11 +908,20 @@ footer .copyright{
 .delete{
     font-weight:bold;
     padding: 2px;
-    border: 1px  solid blue;
+    border: 2px  solid blue;
     margin: 5px;
-    
+   
     text-align: center;
     align-items: center;
 }
 
+.remove{
+    font-weight:bold;
+    padding: 5px;
+    border: 2px  solid blue;
+    margin: 5px;
+    margin-left: 200px;
+    text-align: center;
+    align-items: center;
+}
 
