--- a/style.css
+++ b/style.css
@@ -940,6 +940,7 @@ td, th {
 
 .card{
     border: 2px solid rgb(243, 243, 246);
+    border-radius: 5px;;
     padding: 5px;
     margin: 10px;
     display: flex;
@@ -953,9 +954,10 @@ td, th {
 
  .course-pic{
     align-items: center;
-    border: 2px solid salmon;
+    border: 2px solid white;
     width: 200px;
     height: 150px;
+    border-radius: 5px;
     margin-right: 20px;
     background-position: center;
     background-size: cover;
@@ -977,7 +979,7 @@ td, th {
 .remove{
     font-weight:bold;
     padding: 5px;
-    border: 2px  solid blue;
+    border: 2px  solid black;
     margin: 7px;
     margin-left: 70px;
     text-align: center;
